fixed heart and cart spacing in catalog view

--- a/garden-of-eden-ng/src/app/catalog/catalog/catalog.component.css
+++ b/garden-of-eden-ng/src/app/catalog/catalog/catalog.component.css
@@ -39,6 +39,15 @@
     align-items: center;
 }
 
+.plant-price span {
+    display: flex;
+    gap: 12px;
+}
+
+.plant-price span button {
+    padding: 0;
+}
+
 .thumbnail {
     top: -50px;
     left: -35px;
@@ -52,47 +61,4 @@
 
 .thumbnail:hover {
     transform: scale(1.2);
-
-}
-
-
-
-
-/* -----------------------Details----------------------- */
-
-
-
-.details-wrapper {
-    background-color: gainsboro;
-    color: black;
-    font-size: 22px;
-    display: flex;
-    gap: 50px;
-    justify-content: space-around;
-    padding: 40px 200px;
-}
-
-.details-wrapper .details-info-holder {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.details-wrapper hr {
-    width: 80%;
-}
-
-.details-wrapper .name {
-    font-size: 40px;
-}
-
-.details-wrapper .buttons {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-}
-
-.details-wrapper hr {
-    color: black;
 }
